Added rudimentary playback controls.

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,12 @@
 
 		<video controls id="player" class="player"></video>
 
+		<img src="/icons/first.svg" id="previous" class="icon">
+		<img src="/icons/loop4.svg" id="shuffle" class="icon">
+		<img src="/icons/last.svg" id="next" class="icon">
+
+		<ul id="tags" class="tags"></ul>
+
 		<div>
 		    <span id="collectionSize"></span>
 		    <ul id="collectionContent"></ul>
